# teor_aut_lab3

./: .gitignore  CMakeLists.txt  build.sh  f_table.txt  g_table.txt
src/: classes.h  f_comp_table.cpp  main.cpp  pre_comp_table.cpp  s_couple.cpp  s_max_comp.cpp
